--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -58,7 +58,9 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="hero-btn">Order Service</button>
+          <button type="button" class="hero-btn" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
 
@@ -439,6 +441,7 @@
               digital marketing & growth solutions.
             </p>
           </div>
+
           <div class="footer-social-content">
             <p class="footer-social-text">Social media</p>
             <ul class="footer-icons-list">
@@ -451,7 +454,7 @@
               </li>
               <li>
                 <a href="" class="icon-link footer-icon-link">
-                  <svg class="social-icon" width="24" height="24">
+                  <svg class="footer-btn-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
@@ -472,8 +475,120 @@
               </li>
             </ul>
           </div>
+
+          <div class="footer-input-content">
+            <p class="footer-input-text">Subscribe</p>
+            <form class="footer-form">
+              <input
+                class="footer-input"
+                type="email"
+                placeholder="E-mail"
+                name="footer-input"
+              />
+              <label for="footer-input" class="visually-hidden"></label>
+              <button class="footer-btn" type="submit">
+                Subscribe
+                <svg class="footer-btn-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
+
+    <div class="backdrop" data-modal>
+      <div class="modal">
+        <a href="" class="modal-close-btn" data-modal-close>
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </a>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+
+        <form class="modal-form">
+          <div class="form-field">
+            <label class="form-label" for="name-input">Name</label>
+            <div class="input-wrapper">
+              <input
+                class="form-input"
+                name="name-input"
+                id="name-input"
+                type="text"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="form-field">
+            <label class="form-label" for="tel-input">Phone</label>
+            <div class="input-wrapper">
+              <input
+                class="form-input"
+                name="tel-input"
+                id="tel-input"
+                type="tel"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="form-field">
+            <label class="form-label" for="email-input">Email</label>
+            <div class="input-wrapper">
+              <input
+                class="form-input"
+                name="email-input"
+                id="email-input"
+                type="email"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="form-textarea-field">
+            <label class="form-label" for="input-comment">Comment</label>
+            <div class="input-wrapper">
+              <textarea
+                class="form-textarea"
+                name="input-comment"
+                id="input-comment"
+                placeholder="Text input"
+              ></textarea>
+            </div>
+          </div>
+
+          <div class="form-policy-field">
+            <input
+              type="checkbox"
+              name="policy"
+              id="policy"
+              required
+              value="true"
+              class="form-checkbox visually-hidden"
+            />
+            <label class="form-checkbox-label" for="policy">
+              <span>
+                <svg class="form-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the&nbsp;
+              <a href="">Privacy Policy</a>
+            </label>
+          </div>
+
+          <button class="form-btn" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
