--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <ul class="team-list">
             <li class="team-item">
               <img
-                src="./images/mark_guerrero.jpg"
+                src="./images/mark-guerrero.jpg"
                 alt="Mark Guerrero's photo"
                 width="264"
                 height="260"
@@ -212,7 +212,7 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/camila_garcia.jpg"
+                src="./images/camila-garcia.jpg"
                 alt="Camila Garcia's photo"
                 width="264"
                 height="260"
@@ -487,7 +487,7 @@
               name="footer-input"
               id="footer-input"
             />
-            <label for="footer-input" class="visually-hidden"></label>
+            <label for="footer-input" class="visually-hidden">email</label>
             <button class="footer-btn" type="submit">
               Subscribe
               <svg class="footer-btn-icon" width="24" height="24">
